# Fitness-Training

./: .env-template  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: urls.py
api/diet/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
api/diet/migrations/: 0001_initial.py  0002_remove_portionfood_food_item_portionfood_food_item.py
api/subscription/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
api/subscription/migrations/: 0001_initial.py  0002_alter_subscription_managers.py
api/training/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
api/training/migrations/: 0001_initial.py  0002_alter_fitnessexercise_muscle_group.py
api/users/: admin.py  apps.py  base_serializers.py  documents.py  models.py  serializers.py  urls.py  utils.py  views.py
api/users/migrations/: 0001_initial.py  0002_alter_coachprofile_experience_and_more.py  0002_alter_profile_birth_date_alter_profile_phone.py  0002_alter_profile_options_alter_coachprofile_experience_and_more.py  0003_alter_coachprofile_managers.py  0003_alter_profile_birth_date_alter_profile_phone.py  0003_alter_profile_options_alter_profile_email.py  0004_profile_profile_type.py
config/: settings.py  urls.py
dev-configs/: .black
